# 3d-path-finding

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: bubbles1_3d.cetsp
examples/: aco_vs_aha_comparison.py  cetsp_benchmark_table.py  cetsp_bubbles1_3d_benchmark.py  cetsp_example.py  cetsp_variant_comparison.py
src/cetsp/: __init__.py  convert_to_3d.py  node.py  problem.py
src/cetsp/solvers/: __init__.py  aco.py  aha.py  astar.py  base.py  genetic.py  greedy.py  gwo.py  insertion.py  pso.py  sa.py  two_opt.py
tests/: test_cetsp.py  test_convert_to_3d.py
